[package]
name = "fingerprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.24"
crc = "1.8.1"
reqwest = { version = "0.11.9", features = ["json"] }

[dependencies.web-sys]
version = "0.3.27"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "z"