[package]
name = "fingerprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
sha2 = "0.10.8"

[dependencies.web-sys]
version = "0.3.27"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Navigator',
  'Screen',
  "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "z"
